--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ body.menu-open {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-image: url("./Resources/Hero images/file_0000000084e471f4a1f7c0262da6b2d9.png") no-repeat center center / cover;
   position: relative;
   overflow: hidden;
 }
@@ -147,7 +148,7 @@ body.menu-open {
   z-index: 10;
   text-align: center;
   max-width: 800px;
-  background: url("./Resources/Hero images/file_0000000084e471f4a1f7c0262da6b2d9.png") no-repeat center center / cover;
+}
 
 .hero-paragraph h2 {
   font-size: 3.5rem;
