--- a/style.css
+++ b/style.css
@@ -824,7 +824,7 @@ body.menu-open {
   gap: 1rem;
   margin-bottom: 1rem;
   justify-content: center;
-  min-height: 200px;
+  min-height: 140px;
 }
 
 .contact-info-group i {
@@ -855,8 +855,8 @@ body.menu-open {
 
 .socials {
   display: flex;
-  justify-content: center;
-  gap: 2rem;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
 .socials-icons {
