--- a/style.css
+++ b/style.css
@@ -824,7 +824,7 @@ body.menu-open {
   gap: 1rem;
   margin-bottom: 1rem;
   justify-content: center;
-  min-height: 140px;
+  min-height: 100px;
 }
 
 .contact-info-group i {
@@ -855,7 +855,7 @@ body.menu-open {
 
 .socials {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap: 1rem;
 }
 
