--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body.menu-open {
 }
 
 #alias {
-  font-size: 1.1rem;
+  font-size:clamp(0.65rem,5vw,1,1rem);
   font-weight: bold;
   color: var(--primary);
   letter-spacing: 2px;
@@ -162,7 +162,7 @@ body.menu-open {
 }
 
 .hero-paragraph p {
-  font-size: 1.4rem;
+  font-size:clamp(0.75rem,2.5vw,1.4rem);
   margin-bottom: 3rem;
   color: var(--text-light);
   min-height: 2em;
