--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ body.menu-open {
   gap: 3rem;
   padding-top: 2rem;
   border-top: 1px solid rgba(147, 129, 255, 0.2);
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 100%;
 }
 
